# IPR

./: .dockerignore  .env.sample  Dockerfile  LICENSE  Makefile  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml
app/: __init__.py  auth.py  config.py  controllers.py  forms.py  models.py  views.py
app/static/css/: edit_offer.css  home.css  login.css  new_offer.css  offers.css  view_offer.css  warehouse.css
app/templates/: base.html  change_email.html  change_password.html  delete_offer.html  edit_offer.html  home.html  login.html  new_offer.html  offers.html  view_offer.html  warehouse.html
