[tool.poetry]
name = "ipr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
psycopg2-binary = "2.9.9"
python = "3.10.2"
flask = "3.0.1"
flask-bcrypt = "1.0.1"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.1"
flask-login = "0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
